fix(cleanup): code cleanup